@@ -1,3 +1,8 @@
+Fri Nov 01 14:22:49 2002  George Lebl <jirka@5z.com>
+
+	* src/matrixw.c, src/mpwrap.c, src/plugin.c: Some leak hunting,
+	  probably many leaks still left
+
 Fri Nov 01 11:58:39 2002  George Lebl <jirka@5z.com>
 
 	* src/funclib.c: add a Combinations and Permutations function.  Also
